--- a/DracoHatch.html
+++ b/DracoHatch.html
@@ -21,6 +21,18 @@
       baseProfile="full"
       width="600" height="600"
       xmlns="http://www.w3.org/2000/svg">
+      <circle class="star" cx=300 cy=100 r=4 style="fill:white;opacity:0;"/>
+      <circle class="star" cx=483 cy=69 r =4 style="fill:white;opacity:.75;"/>
+      <circle class="star" cx=278 cy=2 r=4 style="fill:white;opacity:.5;"/>
+      <circle class="star" cx=500 cy=500 r=4 style="fill:white;opacity:.25"/>
+      <circle class="star1" cx=397 cy=154 r=3 style="fill:white;opacity:0;"/>
+      <circle class="star1" cx=408 cy=201 r=3 style="fill:white;opacity:.75"/>
+      <circle class="star1" cx=243 cy=317 r=3 style="fill:white;opacity:.5"/>
+      <circle class="star1" cx=542 cy=43 r=3 style="fill:white;opacity:.25"/>
+      <circle class="star2" cx=31 cy=41 r=2 style="fill:white;opacity:0;"/>
+      <circle class="star2" cx=43 cy=428 r=2 style="fill:white;opacity:.75;"/>
+      <circle class="star2" cx=245 cy=24 r=2 style="fill:white;opacity:.5;"/>
+      <circle class="star2" cx=574 cy=24 r=2 style="fill:white;opacity:.25;"/>
       <path
          id="polyt1a"
          d="m 189,189 -8.089994,7.17615 10.808333,-0.35362 -10.594214,2.16973 9.537101,5.09792 -10.259724,-3.41806 5.710411,9.18348 -7.176149,-8.09 0.353621,10.80834 -2.169731,-10.59422 -5.0979218,9.5371 3.4180648,-10.25972 -9.18348,5.71041 8.089993,-7.17615 -10.80833252,0.35362 10.59421452,-2.16973 -9.53710146,-5.09792 10.25972446,3.41807 -5.7104114,-9.18348 7.1761494,8.08999 -0.353621,-10.80833 2.169731,10.59421 5.097921,-9.5371 -3.418065,10.25972 z"
@@ -69,18 +81,18 @@
          cy="977.72314"
          cx="38.267147"
          id="path3469"
-         style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1" />
+         style="fill:#98C7E1" />
         <ellipse
          ry="7.1299639"
          rx="7.3104692"
          cy="975.19604"
          cx="52.617329"
          id="path3471"
-         style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1" />
+         style="fill:#98C7E1" />
         <path
          d="m 64.135091,970.27254 a 4.4223828,2.8880866 0 0 1 -5.244712,0.22305 4.4223828,2.8880866 0 0 1 -1.867282,-3.20844 4.4223828,2.8880866 0 0 1 4.147564,-2.10823 4.4223828,2.8880866 0 0 1 4.304243,1.96973 l -4.193314,0.91745 z"
          id="path3473"
-         style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1" />
+         style="fill:#98C7E1;stroke:#0000ea;stroke-opacity:1" />
         <ellipse
          transform="matrix(0,1,-1,0,0,0)"
          ry="3.3393502"
@@ -95,16 +107,16 @@
          cy="984.04083"
          cx="50.451263"
          id="path3479"
-         style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1" />
+         style="fill:#98C7E1" />
         <ellipse
          ry="2.3465705"
          rx="1.2635379"
          cy="984.13104"
          cx="55.415161"
          id="path3481"
-         style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1" />
+         style="fill:#98C7E1" />
         <path
-         id="path3518"
+         id="wing2"
          d="m 47.992647,963.85805 a 9.6226346,3.9865398 28.925546 0 0 -10.092852,-0.85016 9.6226346,3.9865398 28.925546 0 0 6.88706,8.18266 9.6226346,3.9865398 28.925546 0 0 10.092871,0.85012 9.6226346,3.9865398 28.925546 0 0 -6.887079,-8.18262 z"
          style="fill:#ff0000;stroke:#0000ea;stroke-width:1.13248765;stroke-opacity:1" />
         <ellipse
@@ -113,7 +125,7 @@
          cy="966.53174"
          cx="60.649818"
          id="path3533"
-         style="fill:#2b0000;stroke:none;stroke-opacity:1" />
+         style="fill:#2b0000" />
         </g>
 
     </svg>
@@ -172,6 +184,7 @@
        cx="60.649818"
        id="path3533"
        style="fill:#2b0000;stroke:none;stroke-opacity:1" />
+
       </g>
     </svg>
 
