added more triangles

--- a/dracohatchold.html
+++ b/dracohatchold.html
@@ -24,64 +24,60 @@
 </cc:Work>
 </rdf:RDF>
 </metadata>
-<g
- transform="translate(-2.166065,0)"
- id="g4213">
 <ellipse
- ry="0.63176894"
- rx="9.0252705"
- cy="23.194954"
- cx="33.393501"
+ style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1"
  id="path3469"
- style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1" />
+ cx="33.393501"
+ cy="23.194954"
+ rx="9.0252705"
+ ry="0.63176894" />
 <ellipse
- ry="7.1299639"
- rx="7.3104692"
- cy="22.292402"
- cx="49.007221"
+ style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1"
  id="path3471"
- style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1" />
+ cx="49.007221"
+ cy="22.292402"
+ rx="7.3104692"
+ ry="7.1299639" />
 <path
- d="m 61.608016,18.090918 a 4.4223828,2.8880866 0 0 1 -5.244712,0.22305 4.4223828,2.8880866 0 0 1 -1.867282,-3.20844 4.4223828,2.8880866 0 0 1 4.147564,-2.10823 4.4223828,2.8880866 0 0 1 4.304243,1.96973 l -4.193314,0.91745 z"
+ style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1"
  id="path3473"
- style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1" />
+ d="m 61.608016,18.090918 a 4.4223828,2.8880866 0 0 1 -5.244712,0.22305 4.4223828,2.8880866 0 0 1 -1.867282,-3.20844 4.4223828,2.8880866 0 0 1 4.147564,-2.10823 4.4223828,2.8880866 0 0 1 4.304243,1.96973 l -4.193314,0.91745 z" />
 <ellipse
- transform="matrix(0,1,-1,0,0,0)"
- ry="3.3393502"
- rx="6.0469313"
- cy="-49.007217"
- cx="10.920575"
+ style="fill:#ff0000;stroke:#0000ea;stroke-opacity:1"
  id="path3475"
- style="fill:#ff0000;stroke:#0000ea;stroke-opacity:1" />
+ cx="10.920575"
+ cy="-49.007217"
+ rx="6.0469313"
+ ry="3.3393502"
+ transform="matrix(0,1,-1,0,0,0)" />
 <ellipse
- ry="2.2563176"
- rx="0.99277979"
- cy="31.317694"
- cx="46.660652"
+ style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1"
  id="path3479"
- style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1" />
+ cx="46.660652"
+ cy="31.317694"
+ rx="0.99277979"
+ ry="2.2563176" />
 <ellipse
- ry="2.3465705"
- rx="1.2635379"
- cy="31.046894"
- cx="51.444042"
+ style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1"
  id="path3481"
- style="fill:#0000ff;stroke:#0000ea;stroke-opacity:1" />
+ cx="52.346569"
+ cy="30.685883"
+ rx="1.2635379"
+ ry="2.3465705" />
 <path
- id="path3518"
+ style="fill:#ff0000;stroke:#0000ea;stroke-width:1.13248765;stroke-opacity:1"
  d="m 44.021528,9.8713743 a 9.6226346,3.9865398 28.925546 0 0 -10.092852,-0.8501606 9.6226346,3.9865398 28.925546 0 0 6.88706,8.1826603 9.6226346,3.9865398 28.925546 0 0 10.092871,0.85012 9.6226346,3.9865398 28.925546 0 0 -6.887079,-8.1826197 z"
- style="fill:#ff0000;stroke:#0000ea;stroke-width:1.13248765;stroke-opacity:1" />
+ id="path3518" />
 <ellipse
- ry="0.99277949"
- rx="0.7220214"
- cy="14.169611"
- cx="58.122746"
+ style="fill:#2b0000;stroke:none;stroke-opacity:1"
  id="path3533"
- style="fill:#2b0000;stroke:none;stroke-opacity:1" />
+ cx="58.122746"
+ cy="14.169611"
+ rx="0.7220214"
+ ry="0.99277949" />
 <path
- style="fill:#ffff00;stroke:#ff0000;stroke-opacity:1"
- id="path4173"
+ transform="matrix(-0.17746188,0.58296309,-0.80907108,-0.12786729,123.37229,-20.478337)"
  d="m 81.846138,48.314729 c 0.06105,-0.116038 1.27867,-6.63019 1.700018,-6.530965 0.421348,0.09922 -0.739166,3.404819 -1.472849,3.699416 -0.733682,0.294598 4.778312,-10.412377 4.985992,-10.332207 0.20768,0.08017 -10.48011,27.897516 -11.055545,27.308504 -0.575434,-0.589012 -4.76338,-27.623898 -4.998228,-26.84005 -0.234848,0.783847 -3.761679,-4.446836 -4.073995,-4.516732 -0.312315,-0.0699 7.057011,1.825701 7.504725,1.575434 0.447714,-0.250266 5.696694,5.131205 5.716496,5.157665 0.0198,0.02646 5.954997,-4.398105 6.115507,-4.214772 0.160509,0.183333 -4.483169,14.809744 -4.422121,14.693707 z"
- transform="matrix(-0.17746188,0.58296309,-0.80907108,-0.12786729,123.37229,-20.478337)" />
-</g>
+ id="path4173"
+ style="fill:#ffff00;stroke:#ff0000;stroke-opacity:1" />
 </svg>
