--- a/DracoHatch.html
+++ b/DracoHatch.html
@@ -167,25 +167,25 @@
         <circle id ="dracoDot" cx="200" cy="200" r="5"/>
         <!--<path id ="poly1" d="M 200,200 175,200 200,175 Z" />-->
         <!-- upper left repearDelay-->
-        <path id="poly1ta" d="M 175,200 187.5,187.5 187.5,200 Z"/>
-        <path id="poly1tc" d="M 187.5,187.5 200,200 200,187.5 Z"/>
-        <path id="poly1td" d="M 187.5,187.5 200,187.5 200,175 Z"/>
-        <path id="poly1tb" d="M 187.5,187.5 187.5,200 200,200 Z"/>
+        <path class="eggPath" id="poly1ta" d="M 175,200 187.5,187.5 187.5,200 Z"/>
+        <path class="eggPath" id="poly1tc" d="M 187.5,187.5 200,200 200,187.5 Z"/>
+        <path class="eggPath" id="poly1td" d="M 187.5,187.5 200,187.5 200,175 Z"/>
+        <path class="eggPath" id="poly1tb" d="M 187.5,187.5 187.5,200 200,200 Z"/>
         <!-- upper right blue-->
-        <path id="poly2ta" d="M 200,175 200,187.5 212.5,187.5 Z"/>
-        <path id="poly2tb" d="M 212.5,187.5 200,187.5 200,200 Z"/>
-        <path id="poly2tc" d="M 212.5,187.5 200,200 212.5,200 Z"/>
-        <path id="poly2td" d="M 212.5,187.5 212.5,200 225,200Z"/>
+        <path class="eggPath" id="poly2ta" d="M 200,175 200,187.5 212.5,187.5 Z"/>
+        <path class="eggPath" id="poly2tb" d="M 212.5,187.5 200,187.5 200,200 Z"/>
+        <path class="eggPath" id="poly2tc" d="M 212.5,187.5 200,200 212.5,200 Z"/>
+        <path class="eggPath" id="poly2td" d="M 212.5,187.5 212.5,200 225,200Z"/>
         <!-- lower left purple-->
-        <path id="poly3ta" d= "M 175,200  187.5,200 187.5,212.5 Z"/>
-        <path id="poly3tb" d="M 187.5,200 187.5,212.5 200,200 Z"/>
-        <path id="poly3tc" d="M 200,200 187.5,212.5 200,212.5 Z"/>
-        <path id="poly3td" d="M 187.5,212.5 200,212.5 200,225 Z"/>
+        <path class="eggPath" id="poly3ta" d= "M 175,200  187.5,200 187.5,212.5 Z"/>
+        <path class="eggPath" id="poly3tb" d="M 187.5,200 187.5,212.5 200,200 Z"/>
+        <path class="eggPath" id="poly3tc" d="M 200,200 187.5,212.5 200,212.5 Z"/>
+        <path class="eggPath" id="poly3td" d="M 187.5,212.5 200,212.5 200,225 Z"/>
         <!-- lower right yellow-->
-        <path id="poly4ta" d="M 200,200 200,212.5 212.5,212.5 Z"/>
-        <path id="poly4tb" d="M 200,200 212.5,200 212.5,212.5 Z"/>
-        <path id="poly4tc" d="M 200,212.5 212.5,212.5 200,225 Z"/>
-        <path id="poly4td" d="M 212.5,212.5 212.5,200 225,200 Z"/>
+        <path class="eggPath" id="poly4ta" d="M 200,200 200,212.5 212.5,212.5 Z"/>
+        <path class="eggPath" id="poly4tb" d="M 200,200 212.5,200 212.5,212.5 Z"/>
+        <path class="eggPath" id="poly4tc" d="M 200,212.5 212.5,212.5 200,225 Z"/>
+        <path class="eggPath" id="poly4td" d="M 212.5,212.5 212.5,200 225,200 Z"/>
 
       </g>
       <g id="draco" transform="translate(50,150)">
@@ -248,9 +248,13 @@
          transform="matrix(-0.17746188,0.58296309,-0.80907108,-0.12786729,123.37229,-20.478337)" />
 
         </g>
+         <path
+          id="motionPath"
+          d="m 68.571429,200 137.142861,34.28572 -2.85715,285.71428 0,0 397.14286,-311.42857 -2.85714,0 28.57143,-14.28571"
+           />
 
     </svg>
-
+  
   </div>
 </body>
 </html>
