--- a/spoutToss.html
+++ b/spoutToss.html
@@ -66,42 +66,42 @@
     style="fill:#cccccc;filter:url(#filter4315)"
     id="g4222">
    <ellipse
-    ry="48.083633"
-    rx="87.144539"
-    cy="118.16705"
-    cx="500.3418"
+    ry="48.0"
+    rx="87.1"
+    cy="108.1"
+    cx="-299.7"
     id="path4170-1"
-    style="opacity:0.97000002;fill:#cccccc;fill-opacity:1;stroke:#ef0000;stroke-width:2.2488153;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+    style="opacity:0.97;fill:#cccccc;fill-opacity:1;stroke:#ef0000;stroke-width:2.2488153;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
    <ellipse
-    ry="20.494747"
-    rx="41.422462"
-    cy="175.92462"
-    cx="531.90698"
+    ry="20.4"
+    rx="41.4"
+    cy="165.9"
+    cx="-268.1"
     id="path4170-3"
-    style="opacity:0.97000002;fill:#cccccc;fill-opacity:1;stroke:#ef0000;stroke-width:1.01221848;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+    style="opacity:0.97;fill:#cccccc;fill-opacity:1;stroke:#ef0000;stroke-width:1.01221848;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
    <ellipse
-    ry="17.179253"
-    rx="41.464966"
-    cy="75.856262"
-    cx="449.97177"
+    ry="17.1"
+    rx="41.4"
+    cy="65.8"
+    cx="-350.1"
     id="path4170-8"
-    style="opacity:0.97000002;fill:#cccccc;fill-opacity:1;stroke:#ef0000;stroke-width:0.92720938;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+    style="opacity:0.97;fill:#cccccc;fill-opacity:1;stroke:#ef0000;stroke-width:0.92720938;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
    </g>
    <g class="clouds"
     id="g4870"
     style="fill:#cccccc;fill-opacity:1;filter:url(#filter4284)">
    <ellipse
-    ry="68.335205"
-    rx="71.263863"
-    cy="287.00787"
-    cx="92.740639"
+    ry="68.3"
+    rx="71.2"
+    cy="287.0"
+    cx="2.7"
     id="path4858"
     style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#cccccc;fill-opacity:1;fill-rule:nonzero;stroke:#224ed4;stroke-width:1.89999998;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
    <ellipse
-    ry="42.95356"
-    rx="43.929779"
-    cy="300.67493"
-    cx="163.02829"
+    ry="42.9"
+    rx="43.9"
+    cy="300.6"
+    cx="73.0"
     id="path4868"
     style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#cccccc;fill-opacity:1;fill-rule:nonzero;stroke:#224ed4;stroke-width:1.89999998;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
    </g>
@@ -135,6 +135,17 @@
     id="path4302"
     style="color:#000000;clip-rule:nonzero;display:inline;overflow:visible;visibility:visible;opacity:1;isolation:auto;mix-blend-mode:normal;color-interpolation:sRGB;color-interpolation-filters:linearRGB;solid-color:#000000;solid-opacity:1;fill:#cccccc;fill-opacity:0.98076922;fill-rule:nonzero;stroke:#224ed4;stroke-width:1.89999998;stroke-linecap:butt;stroke-linejoin:miter;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:0;color-rendering:auto;image-rendering:auto;shape-rendering:auto;text-rendering:auto;enable-background:accumulate" />
    </g>
+
+
+   <path
+    class="island"
+    d="m 534,510 34.1617,-12.67733 21.82552,1.81105 12.33616,9.96076 -18.97871,6.33866 c -5.69362,-8.46721 -11.38722,-11.56868 -17.08085,-2.71656 l -11.38723,1.81105 c 2.61787,-7.11311 -11.67222,-4.18335 -20.87659,-4.52763 z"
+    style="fill:#b88100;fill-rule:evenodd;stroke:#000000;stroke-width:0.42549661px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
+    <path
+     class="island"
+     d="m 100,540 34.1617,-12.67733 21.82552,1.81105 12.33616,9.96076 -18.97871,6.33866 c -5.69362,-8.46721 -11.38722,-11.56868 -17.08085,-2.71656 l -11.38723,1.81105 c 2.61787,-7.11311 -11.67222,-4.18335 -20.87659,-4.52763 z"
+     style="fill:#b88100;fill-rule:evenodd;stroke:#000000;stroke-width:0.42549661px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
+
       <g
        id="whale">
       <path
@@ -166,13 +177,20 @@
      id="mouth"
      d="m 37.275987,559.49081 c 205.206833,-17.2574 247.415153,-34.5148 244.364813,-51.7722"
      style="fill:none;stroke:#000000;stroke-width:1px;" />
-
+     <path
+      id="whaleFrown"
+      d="m 34.85719,550 c 76.94483,9.47196 210.78643,-37.95287 228.75031,30.50004"
+      style="fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
+      <path
+       id="whaleSmile"
+       d="m 37.275987,559.49081 c 205.206833,-17.2574 247.415153,-34.5148 244.364813,-51.7722"
+       style="fill:none;stroke:#000000;stroke-width:1px;" />
     <path
-     style="fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-     d="m 16.069232,586.35447 34.43407,-11.47803 45.912092,18.36484 41.320886,-20.66044 50.5033,13.77363 41.32088,-22.95605 39.02528,16.06923 39.02528,-9.18241 27.54725,9.18241 36.72968,-11.47802 20.66044,13.77363 25.25165,-13.77363 25.25165,13.77363 22.95605,-13.77363 29.84286,16.06923 20.66044,-18.36483 22.95604,16.06923 20.66045,-9.18242 20.66044,6.88681 27.54725,-9.18241 16.06924,9.18241"
-     id="wave" />
+       id="wave"
+       d="m 30.870488,576.07468 44.100696,-8.82014 41.895666,11.02517 39.69063,-15.43524 30.87048,8.82014 39.69063,-19.84531 33.07552,26.46041 39.69062,-35.28055 26.46042,24.25538 44.1007,-24.25538 26.46042,24.25538 46.30573,-24.25538 41.89566,22.05035 28.66545,-28.66546 39.69063,15.43525 41.89566,-24.25539 22.05035,22.05035 33.07552,-19.84531 19.84531,17.64028 30.87049,-8.82014 33.07552,19.84531 0,99.22655 -705.611137,0 z"
+       style="fill:#000099;fill-opacity:1;" />
 
-    </g>
+  </g>
 
   <path
    id="motionPath"
@@ -283,11 +301,10 @@
     id="drop8"
     style="opacity:0;fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:#224ed4;stroke-width:1.89999998;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0" />
    </g>
-
-  <path
-   id="motionPath2"
-   d="m 212.75193,75.982831 c 350.04087,-13.377385 448.27179,216.661499 497.68754,493.888399"
-   style="fill:none;stroke:#000;opacity:0" />
+   <path
+    style="fill:none;stroke:#000;stroke-opacity:0"
+    d="m 212.75193,75.982831 c 350.04087,-16.85937 149.35112,213.389559 198.76687,493.888399"
+    id="motionPath2" />
    <rect
     y="402.70901"
     x="600"
@@ -295,7 +312,69 @@
     width="300"
     id="dock"
     style="opacity:0.97000002;fill:#552200;fill-opacity:1;stroke:#ef0000;stroke-width:1;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" />
+    <path
+     id="shore"
+     d="m 1600,450 -220.4382,5.10672 -186.14781,58.72719 -225.33683,66.38727 338.00524,17.87349 293.9176,-12.76679 z"
+     style="fill:#804d00;387px;" />
 
+    <g
+     transform="translate(28.665452,-189.63299)"
+     id="g4590">
+    <ellipse
+     ry="20"
+     rx="6"
+     cy="745"
+     cx="312.0"
+     id="splash1"
+     style="opacity:0;fill:#6666ff;" />
+
+    <ellipse
+     ry="20"
+     rx="6"
+     cy="765"
+     cx="470"
+     id="splash3"
+     style="opacity:0;fill:#6666ff;" />
+    <ellipse
+     ry="20"
+     rx="6"
+     cy="740"
+     cx="420"
+     id="splash4"
+     style="opacity:0;fill:#6666ff;" />
+
+     <ellipse
+      ry="20"
+      rx="6"
+      cy="730"
+      cx="380"
+      id="splash2"
+      style="opacity:0;fill:#6666ff;" />
+
+     <g
+      transform="translate(20,-30)"
+      id="waves">
+     <path
+      style="opacity:0;fill:#0000cc;"
+      d="m 368.24023,728.22266 a 266.8092,136.71216 0 0 0 -266.80859,136.71093 266.8092,136.71216 0 0 0 266.80859,136.71291 266.8092,136.71216 0 0 0 266.81055,-136.71291 266.8092,136.71216 0 0 0 -266.81055,-136.71093 z m 2.20508,8.82031 a 213.88838,92.611458 0 0 1 213.88867,92.61133 213.88838,92.611458 0 0 1 -213.88867,92.61132 213.88838,92.611458 0 0 1 -213.88867,-92.61132 213.88838,92.611458 0 0 1 213.88867,-92.61133 z"
+      id="wave1" />
+     <path
+      style="opacity:0;fill:#0000ff;"
+      d="m 365.43164,735.66016 a 213.88838,92.611458 0 0 0 -213.88867,92.61132 213.88838,92.611458 0 0 0 213.88867,92.61133 213.88838,92.611458 0 0 0 213.88867,-92.61133 213.88838,92.611458 0 0 0 -213.88867,-92.61132 z m 0.60352,7.99804 a 165.37761,67.253563 0 0 1 165.3789,67.25196 165.37761,67.253563 0 0 1 -165.3789,67.2539 165.37761,67.253563 0 0 1 -165.37696,-67.2539 165.37761,67.253563 0 0 1 165.37696,-67.25196 z"
+      id="wave2" />
+     <path
+      style="opacity:0;fill:#3333ff;"
+      d="m 366.03516,742.55469 a 165.37761,67.253563 0 0 0 -165.37696,67.2539 165.37761,67.253563 0 0 0 165.37696,67.25391 165.37761,67.253563 0 0 0 165.3789,-67.25391 165.37761,67.253563 0 0 0 -165.3789,-67.2539 z m -4.41016,5.51367 a 121.27692,51.818317 0 0 1 121.27734,51.81836 121.27692,51.818317 0 0 1 -121.27734,51.8164 121.27692,51.818317 0 0 1 -121.27539,-51.8164 121.27692,51.818317 0 0 1 121.27539,-51.81836 z"
+      id="wave3" />
+     <ellipse
+      style="opacity:0;fill:#6666ff;"
+      id="wave4"
+      cx="363.83078"
+      cy="800.98822"
+      rx="121.27692"
+      ry="51.818317" />
+     </g>
+    </g>
     <g
      transform="matrix(0.78503468,0,0,0.81249317,-34.173353,-308.9028)"
      id="bear">
@@ -366,24 +445,67 @@
      rx="11.064568"
      ry="11.064567" /><!--tail-->
    </g>
-
-   <path
-    id="bird"
-    d="m 45.559545,163.95117 c 14.49622,-22.41845 28.99243,-9.57066 43.48865,0 16.567105,-19.66907 33.134215,-21.05583 49.701315,-2.07089 l 0,0"
-    style="fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
-
-
-    <g id="fish">
-      <path
-       d="m 244.3,831.8 a 34.169655,21.744326 0 0 1 -33.8418,21.74333 34.169655,21.744326 0 0 1 -34.49121,-21.32608 34.169655,21.744326 0 0 1 33.17993,-22.15257 34.169655,21.744326 0 0 1 35.12792,20.90098"
-       id="body"
-       style="opacity:1;fill:#11e400;fill-opacity:1;fill-rule:nonzero;stroke:#224ed4;stroke-width:1.89999998;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:0" />
-      <path
-       transform="matrix(-0.27032151,-0.27032151,0.22916744,-0.22916744,56.733919,1123.2106)"
-       d="m 416.29413,915.53236 c 0.95054,3.12621 -100.1104,-4.28527 -104.18959,-2.39847 -4.07919,1.8868 -3.544,-145.9237 -11.71057,-142.89041 -8.16658,3.03329 114.94963,142.16268 115.90016,145.28888 z"
-       id="tail"
-       style="fill:#00ffff;fill-rule:evenodd;stroke:#000000;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
+   <g id="splashfront"
+        transform="translate(28.665452,-189.63299)">
+    <ellipse
+      ry="20"
+      rx="6"
+      cy="765"
+      cx="438"
+      id="splash5"
+      style="opacity:0;fill:#6666ff;" />
+    <ellipse
+      ry="20"
+      rx="6"
+      cy="755"
+      cx="355"
+      id="splash6"
+      style="opacity:0;fill:#6666ff;" />
+  </g>
+  <g
+   transform="translate(-238.1,-246.9)"
+   id="fish">
+  <ellipse
+   ry="14.16"
+   rx="20.6"
+   cy="858.1"
+   cx="423.5"
+   id="fishbody"
+   style="fill:#ffff3e;" />
+  <path
+   id="fishtail"
+   d="m 405.3,857.7 -26.0,-20.1 2.1,47.7 z"
+   style="fill:#ffff3e;" />
+  <ellipse
+   style="opacity:1;fill:#2d2d2d;"
+   id="fisheye"
+   cx="425.5"
+   cy="-853.9"
+   rx="4.4"
+   ry="4.4"
+   transform="scale(1,-1)" />
+  <path
+   style="opacity:0;fill:#2d2d2d;stroke-width:1px;stroke:#000000;"
+   id="fishmouth"
+   d="m 443.1,858.3 a 17.6,17.4 0 0 1 -2.3,10.6 l -15.2,-8.8 z" />
+  </g>
+    <g
+     transform="translate(-303.9,-704.2)"
+     class="bird">
+    <path
+     style="fill:none;stroke:#000000;stroke-width:1px;stroke-opacity:1"
+     d="m 430.6,910.5 c 36.3,-40.8 52.3,-44.2 88.6,2.5"
+     id="wing1" />
+    <path
+     style="fill:none;stroke:#000000;stroke-width:1px;stroke-opacity:1"
+     d="m 430.6,910.5 c -38.8,-43.4 -56.5,-39.2 -88.6,5.0"
+     id="wing2" />
     </g>
+    <path
+     id="kickWave"
+     d="m 325,580 c -10.5,-22.0 -21.6,-40.6 -43.5,0 -9.9,-16.4 -21.2,-23.9 -37.0,0 -12.3,-8.6 -24.6,-24.5 -37.0,0 -13.0,-3.6 -26.1,-24.5 -39.2,-2.1 l -37.0,0"
+     style="fill:none;stroke:#6666ff;stroke-width:3px;stroke-opacity:1" />
+
 
   </svg>
 </div>
